@@ -1,1 +1,2 @@
 Stanislav Karchebny <Stanislav.Karchebny@kdemail.net>
+Sashmit Bhaduri <smt@vfemail.net>
